--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ body {
 
 .header-page {
 	position: relative;
-	padding-top: 200px;
-	padding-bottom: 80px;
+	margin-top: 200px;
+	margin-bottom: 80px;
 	margin-bottom: 180px;
 	background: linear-gradient(55.95deg,rgba(255, 63, 58, 0.2), rgba(247, 94, 5, 0.2));
 
@@ -164,7 +164,7 @@ body {
 	line-height: 83px;
 	letter-spacing: 1px;
 	color: #1E212C;
-	padding-bottom: 60px;
+	margin-bottom: 60px;
 }
 .header-page__buttons {
 	display: flex;
@@ -324,7 +324,7 @@ body {
 	margin-bottom: 40px;
 }
 .createx-benefits__list {
-	padding-bottom: 48px;
+	margin-bottom: 48px;
 }
 
 .createx-benefits__list li {
@@ -337,7 +337,7 @@ body {
 }
 
 .createx-benefits__list li:not(:last-child) {
-	padding-bottom: 12px;
+	margin-bottom: 12px;
 }
 
 .createx-benefits__action {
@@ -398,7 +398,7 @@ body {
 	line-height: 24px;
 	letter-spacing: 1px;
 	color: #1E212C;
-	padding-bottom: 8px;
+	margin-bottom: 8px;
 }
 .featured-course__title {
 	font-weight: 900;
