--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,8 @@ body {
 
 .header-page {
 	position: relative;
-	margin-top: 200px;
-	margin-bottom: 80px;
+	padding-top: 200px;
+	padding-bottom: 80px;
 	margin-bottom: 180px;
 	background: linear-gradient(55.95deg,rgba(255, 63, 58, 0.2), rgba(247, 94, 5, 0.2));
 
